SSE: preserve trailing empty lines